- Underbarrel weapons that come with their parent weapon now properly automatically inherit any smartgun features that also come built into their parent weapon. Fixes #4662.
- Added a basic implementation of search for metatypes and critters using Point Buy. This will later be extended to include Priority options. Implements #4546

Data Changes:
- Fixed missing multiplier for Haunted lifestyle quality.
- Fixed missing availability for the BMW Luxus.
- Muscle Augmentation and Muscle Toner now just disable Celerity instead of being forbidden from being bought if the character has Celerity. Fixes #4621.
- Changed Cyberspace Designs Dragonfly (R5) melee autosoft rating to 1.
- Compiling can now properly be chosen for Frostbite.
- Initiative-boosting powers and 'ware now properly disable the defense test bonus given by Lightning Reflexes.
- Synaptic Acceleration now properly adds +1 to defense tests. Known issue: this defense test increase is not disabled if the character buys any initiative-boosting 'ware the way its initiative boost is.
- Two of the Sea Ray Cottonmouth's built-in weapon mounts now properly have Flexible flexibility. Fixes #4656.
- Enabling Delnar Skills Remake no longer causes Chummer to crash.
- Metamagics and echoes acquired outside of initiation and submersion now show up on character sheets that have no initiations or submersions.
- Extended Clip in German Data Changes now properly scales its cost based on the accessory's rating.
- Improved Potential can now properly be taken at multiple levels with German Data Changes.
- Badger Mentor Spirit from SOTG now adds two levels of Perceptive quality rather than 1 level of Perceptive and +2 to Perception.

Changed/New Strings:
- String_GameplayOption
- String_Lossy_Automatic_Compression_Option
- String_Lossy_Manual_Compression_Option
- Message_Options_FileIsNotPDF
- MessageTitle_Options_FileIsNotPDF

Deleted Strings:
- String_Lossy_Compression_Option

Build 216
Application Changes: